# scholartrend-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt  styles.css
backend/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: base.py  critic.py  orchestrator.py  planner.py  researcher.py  writer.py
backend/app/api/: deps.py
backend/app/api/routes/: evaluations.py  health.py  memory.py  research.py  uploads.py
backend/app/core/: config.py  logging.py
backend/app/rag/: __init__.py  chunking.py  embeddings.py  pipeline.py  vector_store.py
backend/app/schemas/: common.py  research.py  upload.py
backend/app/services/: container.py  evaluation.py  llm.py  memory.py  research_analysis.py  search.py  uploads.py
backend/tests/: test_research_analysis.py
docs/: api.md  architecture.md  sample_inputs_outputs.md  system_design.md
evals/: README.md
evals/scenarios/: baseline_queries.json
fine_tuning/: README.md
fine_tuning/datasets/: research_assistant.sample.jsonl
fine_tuning/scripts/: prepare_dataset.py
frontend/: Dockerfile  README.md  app.py  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
notebooks/: scholartrend_walkthrough.ipynb
samples/api/: sample_response.json
src/: __init__.py  cli.py  main.js  snakeLogic.js
tests/: conftest.py  test_deduplication.py  test_query_planner.py  test_relevance_ranker.py  test_report_writer.py  test_trend_discovery.py
(+51 files in other folders)
