[project]
name = "scholartrend-ai"
version = "0.1.0"
description = "Multi-agent LLM research assistant for discovering and summarizing emerging scholarly trends."
readme = "README.md"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py310"
